@@ -1,3 +1,8 @@
+2014-02-21  Albert Chu <chu11@llnl.gov>
+
+	* libipmiconsole/ipmiconsole_processing.c (_sol_retransmission_timeout):
+	Only increment sol packet sequence number for workaround once.
+	 
 2014-02-20  Albert Chu <chu11@llnl.gov>
 
 	* libipmiconsole, ipmiconsole, common/parsecommon: Support
